--- a/consulta.html
+++ b/consulta.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <h2>Cliente Ajax de Peticion HTTP </h2>
+    <h2>Cliente Ajax de Peticion HTTPS </h2>
     <hr>
     <span style="color: blue;"><b>ID</b></span>
     <input type="text" id="id">
     <div id="resultado"></div>
     <button onclick="consultar()">MOSTRAR TODO</button>
     &nbsp;&nbsp;&nbsp;
-    <button onclick="buscarPorID($('#id'))">MOSTAR UNO</button>
+    <button onclick="buscarPorID($('#id'))">MOSTRAR UNO</button>
 </body>
 
 </html>
