--- a/crud.html
+++ b/crud.html
@@ -18,7 +18,7 @@
             </tr>
 
             <tr>
-                <th>NOMBE:</th>
+                <th>NOMBRE:</th>
                 <td><input type="text" id="nombre"> </td>
             </tr>
             <tr>
