--- a/consulta.html
+++ b/consulta.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>Cliente Ajax de Peticion HTT</h2>
+    <h2>Cliente Ajax de Peticion HTTP</h2>
     <hr>
     <span style="color: blue;"><b>ID</b></span>
     <input type="text" id="id">
