--- a/crud.html
+++ b/crud.html
@@ -26,7 +26,7 @@
                 <td><input type="number" id="valor"> </td>
             </tr>
             <tr>
-                <th>FECH:</th>
+                <th>FECHAS:</th>
                 <td><input type="date" id="fecha"> </td>
             </tr>
             <tr>
