--- a/crud.html
+++ b/crud.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h2>Cliente Ajax de Peticion HTTPS </h2>
+    <h2>Cliente Ajax de Peticion HTTS </h2>
     <fieldset style="width: 30%">
         <legend>Datos del Usuario</legend>
         <table>
