--- a/consulta.html
+++ b/consulta.html
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-    <title>Cliente Ajax</title>
+    <title>Consulta cliente</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/funciones.js"></script>
 </head>
 
 <body>
-    <h2>Cliente Ajax de Peticion HTTP</h2>
+    <h2>Consulta de clientes</h2>
     <hr>
     <span style="color: blue;"><b>ID</b></span>
     <input type="text" id="id">
     <div id="resultado"></div>
-    <button onclick="consultar()">MOSTRAR TODO</button>
+    <button onclick="consultarClienteTodo()">MOSTRAR TODO</button>
     &nbsp;&nbsp;&nbsp;
-    <button onclick="buscarPorID($('#id'))">MOSTRAR UNO</button>
+    <button onclick="buscarcClienteId($('#id'))">MOSTRAR UNO</button>
 </body>
 
 </html>
