--- a/consulta.html
+++ b/consulta.html
@@ -16,7 +16,7 @@
     <div id="resultado"></div>
     <button onclick="consultarClienteTodo()">MOSTRAR TODO</button>
     &nbsp;&nbsp;&nbsp;
-    <button onclick="buscarcClienteId($('#id'))">MOSTRAR UNO</button>
+    <button onclick="buscarClienteId($('#id'))">MOSTRAR UNO</button>
 </body>
 
 </html>
