--- a/crudClientes.html
+++ b/crudClientes.html
@@ -14,7 +14,7 @@
         <table>
             <tr>
                 <th>ID:</th>
-                <td><input type="text" id="id" readonly ondblclick="soloLectura()"> </td>
+                <td><input type="text" id="id"> </td>
             </tr>
 
             <tr>
