--- a/crudClientes.html
+++ b/crudClientes.html
@@ -4,7 +4,7 @@
     <title>Clientes</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/funciones.js"></script>
+    <script src="Reto2mintic/js/funciones.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <td><input type="number" id="age"> </td>
             </tr>
             <tr>
-                <td colspan="2">
+                <td colspan="3">
                     <input type="button" value="GUARDAR" onclick="guardarCliente()"> &nbsp;&nbsp;&nbsp;
                     <input type="button" value="EDITAR" onclick="editarCliente()"> &nbsp;&nbsp;&nbsp;
                     <input type="button" value="ELIMINAR" onclick="eliminarCliente()">
