--- a/crudClientes.html
+++ b/crudClientes.html
@@ -4,7 +4,7 @@
     <title>Clientes</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="Reto2mintic/js/funciones.js"></script>
+    <script src="js/funciones.js"></script>
 </head>
 
 <body>
