--- a/crudClientes.html
+++ b/crudClientes.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <th>EMAIL:</th>
-                <td><input type="text" id="email"> </td>
+                <td><input type="email" id="email"> </td>
             </tr>
             <tr>
                 <th>EDAD:</th>
