--- a/crudClientes.html
+++ b/crudClientes.html
@@ -19,15 +19,15 @@
 
             <tr>
                 <th>NOMBRE:</th>
-                <td><input type="text" id="name"> </td>
+                <td><input type="text" id="nombre"> </td>
             </tr>
             <tr>
                 <th>EMAIL:</th>
-                <td><input type="email" id="email"> </td>
+                <td><input type="email" id="correo"> </td>
             </tr>
             <tr>
                 <th>EDAD:</th>
-                <td><input type="number" id="age"> </td>
+                <td><input type="number" id="edad"> </td>
             </tr>
             <tr>
                 <td colspan="3">
