--- a/crudClientes.html
+++ b/crudClientes.html
@@ -14,9 +14,8 @@
         <table>
             <tr>
                 <th>ID:</th>
-                <td><input type="text" id="ide"> </td>
-            </tr>
-
+                <td><input type="number" id="ide"> </td>
+            </tr>            
             <tr>
                 <th>NOMBRE:</th>
                 <td><input type="text" id="nombre"> </td>
