--- a/consultaClientes.html
+++ b/consultaClientes.html
@@ -14,6 +14,18 @@
     <span style="color: blue;"><b>ID</b></span>
     <input type="text" id="id">
     <div id="resultado"></div>
+    <table border="1" cellpadding="3" id="TablaResultado">
+        <tbody><tr>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Edad</th>
+        </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+            </tr>
+        </tbody></table>
     <button onclick="consultarClienteTodo()">MOSTRAR TODO</button>
     &nbsp;&nbsp;&nbsp;
     <button onclick="buscarClienteId($('#id'))">MOSTRAR UNO</button>
