--- a/consultaClientes.html
+++ b/consultaClientes.html
@@ -15,17 +15,14 @@
     <input type="text" id="id">
     <div id="resultado"></div>
     <table border="1" cellpadding="3" id="TablaResultado">
-        <tbody><tr>
-            <th>Nombre</th>
-            <th>Email</th>
-            <th>Edad</th>
-        </tr>
+        <tbody>
             <tr>
-                <td>Jill</td>
-                <td>Smith</td>
-                <td>50</td>
+                <th>Nombre</th>
+                <th>Email</th>
+                <th>Edad</th>
             </tr>
-        </tbody></table>
+        </tbody>
+    </table>
     <button onclick="consultarClienteTodo()">MOSTRAR TODO</button>
     &nbsp;&nbsp;&nbsp;
     <button onclick="buscarClienteId($('#id'))">MOSTRAR UNO</button>
