--- a/crudClientes.html
+++ b/crudClientes.html
@@ -32,7 +32,7 @@
                 <td colspan="2">
                     <input type="button" value="GUARDAR" onclick="guardarCliente()"> &nbsp;&nbsp;&nbsp;
                     <input type="button" value="EDITAR" onclick="editarCliente()"> &nbsp;&nbsp;&nbsp;
-                    <input type="button" value="ELIMINAR" onclick="eliminarCliente($('#ide'))">
+                    <input type="button" value="ELIMINAR" onclick="eliminarCliente()">
                 </td>
             </tr>
         </table>
