--- a/consultaClientes.html
+++ b/consultaClientes.html
@@ -11,10 +11,10 @@
 <body>
     <h2>Consulta de clientes</h2>
     <hr>
-    <span style="color: blue;"><b>ID</b></span>
+    <span style="color: green;"><b>ID</b></span>
     <input type="text" id="id">
-    <div id="resultado"></div>
-    <table border="1" cellpadding="3" id="TablaResultado">
+    <br> </br>
+    <table border="1" cellpadding="2" id="TablaResultado">
         <tbody>
         </tbody>
     </table>
