--- a/Clientes.html
+++ b/Clientes.html
@@ -1,21 +1,21 @@
 <html>
 
 <head>
-    <title>Clientes</title>
+    <title>CLIENTES</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/funciones.js"></script>
 </head>
 
 <body>
-    <h2>Clientes </h2>
+    <h2>GESTIÓN CLIENTES </h2>
     <fieldset style="width: 30%">
         <legend>Datos del Cliente</legend>
         <table>
             <tr>
                 <th>ID:</th>
                 <td><input type="number" id="ide"></td>
-            </tr>            
+            </tr>
             <tr>
                 <th>NOMBRE:</th>
                 <td><input type="text" id="nombre"> </td>
@@ -37,6 +37,19 @@
             </tr>
         </table>
     </fieldset>
+    <h2> CONSULTA DE CLIENTES</h2>
+    <br> </br>
+    <span style="color: green;"><b>ID</b></span>
+    <input type="text" id="id">
+    <br> </br>
+    <button onclick="consultarClienteTodo()">Consulta todo</button>
+    &nbsp;&nbsp;&nbsp;
+    <button onclick="buscarClienteId($('#id'))">Consulta por id</button>
+    <br> </br>
+    <table border="2" cellpadding="3" id="TablaResultado">
+        <tbody>
+        </tbody>
+    </table>
 </body>
 
 </html>
