--- a/Clientes.html
+++ b/Clientes.html
@@ -38,17 +38,29 @@
         </table>
     </fieldset>
     <h2> CONSULTA DE CLIENTES</h2>
-    <span style="color: green;"><b>ID</b></span>
-    <input type="text" id="id">
-    <br> 
-    <button onclick="consultarClienteTodo()">Consulta todo</button>
-    &nbsp;&nbsp;&nbsp;
-    <button onclick="buscarClienteId($('#id'))">Consulta por id</button>
-    <br>
-    <table border="2" cellpadding="3" id="TablaResultado">
-        <tbody>
-        </tbody>
-    </table>
+    <fieldset style="width: 30%">
+        <legend>Consulta</legend>
+        <table>
+            <tr>
+            <tr>
+                <th style="color: green;">ID:</th>
+                <td><input type="number" id="id"></td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <input type="button" value="CONSULTAR TODOS" onclick="consultarClienteTodo()"> &nbsp;&nbsp;&nbsp;
+                    <input type="button" value="CONSULTAR ID" onclick="buscarClienteId($('#id'))">
+                </td>
+            </tr>
+            <tr>
+                <table border="2" cellpadding="3" id="TablaResultado">
+                    <tbody>
+                    </tbody>
+                </table>
+            </tr>
+            </tr>
+        </table>
+    </fieldset>
 </body>
 
 </html>
