--- a/Clientes.html
+++ b/Clientes.html
@@ -4,7 +4,7 @@
     <title>CLIENTES</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/funciones.js"></script>
+    <script src="js/funcionesClientes.js"></script>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
                 </td>
             </tr>
             <tr>
-                <table border="2" cellpadding="3" id="TablaResultado">
+                <table border="2" cellpadding="3" id="TablaResultadoClientes">
                     <tbody>
                     </tbody>
                 </table>
