--- a/Cabana.html
+++ b/Cabana.html
@@ -4,7 +4,7 @@
     <title>CABAÑAS</title>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/funcionesCabana.js"></script>
+    <script src="js/funcionesCabanas.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <th>NOMBRE:</th>
-                <td><input type="text" id="edad"> </td>
+                <td><input type="text" id="nombre"> </td>
             </tr>
             <tr>
                 <td colspan="3">
