--- a/Mensaje.html
+++ b/Mensaje.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <th>MENSAJE:</th>
-                <td><input type="text" id="nombre"> </td>
+                <td><input type="text" id="mensaje"> </td>
             </tr>            
             <tr>
                 <td colspan="3">
