--- a/Cabana.html
+++ b/Cabana.html
@@ -57,7 +57,7 @@
                 </td>
             </tr>
             <tr>
-                <table border="2" cellpadding="3" id="TablaResultadoCabana">
+                <table border="2" cellpadding="3" id="TablaResultadoCabanas">
                     <tbody>
                     </tbody>
                 </table>
