--- a/Mensaje.html
+++ b/Mensaje.html
@@ -45,7 +45,7 @@
                 </td>
             </tr>
             <tr>
-                <table border="2" cellpadding="3" id="TablaResultado">
+                <table border="2" cellpadding="3" id="TablaResultadoMensajes">
                     <tbody>
                     </tbody>
                 </table>
