cambio de titulo

--- a/Cabana.html
+++ b/Cabana.html
@@ -41,7 +41,7 @@
             </tr>
         </table>
     </fieldset>
-    <h2> CONSULTA DE CABAÑAS</h2>
+    <h2> CONSULTA DE CABAÑA</h2>
     <fieldset style="width: 30%">
         <legend>Consulta</legend>
         <table>
