--- a/Cabana.html
+++ b/Cabana.html
@@ -8,39 +8,43 @@
 </head>
 
 <body>
-    <h2>GESTIÓN CABAÑAS </h2>
-    <fieldset style="width: 30%">
-        <legend>Datos de la cabaña</legend>
-        <table>
-            <tr>
-                <th>ID:</th>
-                <td><input type="number" id="ide"></td>
-            </tr>
-            <tr>
-                <th>MARCA:</th>
-                <td><input type="text" id="marca"> </td>
-            </tr>
-            <tr>
-                <th>CUARTOS:</th>
-                <td><input type="number" id="cuartos"> </td>
-            </tr>
-            <tr>
-                <th>CATEGORIA:</th>
-                <td><input type="number" id="categoria"> </td>
-            </tr>
-            <tr>
-                <th>NOMBRE:</th>
-                <td><input type="text" id="nombre"> </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <input type="button" value="GUARDAR" onclick="guardarCabana()"> &nbsp;&nbsp;&nbsp;
-                    <input type="button" value="EDITAR" onclick="editarCabana()"> &nbsp;&nbsp;&nbsp;
-                    <input type="button" value="ELIMINAR" onclick="eliminarCabana()">
-                </td>
-            </tr>
-        </table>
-    </fieldset>
+    <center>
+        <a href="Clientes.html" title="CLIENTES">CLIENTES</a>&nbsp;&nbsp;&nbsp;
+        <a href="Mensaje.html" title="MENSAJES">MENSAJES</a>
+        <h2>GESTIÓN CABAÑAS </h2>
+        <fieldset style="width: 30%">
+            <legend>Datos de la cabaña</legend>
+            <table>
+                <tr>
+                    <th>ID:</th>
+                    <td><input type="number" id="ide"></td>
+                </tr>
+                <tr>
+                    <th>MARCA:</th>
+                    <td><input type="text" id="marca"> </td>
+                </tr>
+                <tr>
+                    <th>CUARTOS:</th>
+                    <td><input type="number" id="cuartos"> </td>
+                </tr>
+                <tr>
+                    <th>CATEGORIA:</th>
+                    <td><input type="number" id="categoria"> </td>
+                </tr>
+                <tr>
+                    <th>NOMBRE:</th>
+                    <td><input type="text" id="nombre"> </td>
+                </tr>
+                <tr>
+                    <td colspan="3">
+                        <input type="button" value="GUARDAR" onclick="guardarCabana()"> &nbsp;&nbsp;&nbsp;
+                        <input type="button" value="EDITAR" onclick="editarCabana()"> &nbsp;&nbsp;&nbsp;
+                        <input type="button" value="ELIMINAR" onclick="eliminarCabana()">
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+    </center>
     <h2> CONSULTA DE CABAÑA</h2>
     <fieldset style="width: 30%">
         <legend>Consulta</legend>
