--- a/Cabana.html
+++ b/Cabana.html
@@ -39,7 +39,9 @@
                     <td colspan="3">
                         <input type="button" value="GUARDAR" onclick="guardarCabana()"> &nbsp;&nbsp;&nbsp;
                         <input type="button" value="EDITAR" onclick="editarCabana()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="ELIMINAR" onclick="eliminarCabana()">
+                        <abbr title="SOLO INTRODUCE ID A ELIMINAR">Al eliminar
+                            <input type="button" value="ELIMINAR" onclick="eliminarCabana()">
+                        </abbr>
                     </td>
                 </tr>
             </table>
