--- a/Cabana.html
+++ b/Cabana.html
@@ -39,9 +39,7 @@
                     <td colspan="3">
                         <input type="button" value="GUARDAR" onclick="guardarCabana()"> &nbsp;&nbsp;&nbsp;
                         <input type="button" value="EDITAR" onclick="editarCabana()"> &nbsp;&nbsp;&nbsp;
-                        <abbr title="SOLO INTRODUCE ID A ELIMINAR">Al eliminar
-                            <input type="button" value="ELIMINAR" onclick="eliminarCabana()">
-                        </abbr>
+                        <input type="button" value="ELIMINAR" onclick="eliminarCabana()" title="Introduce solo el ID a eliminar">
                     </td>
                 </tr>
             </table>
