--- a/Clientes.html
+++ b/Clientes.html
@@ -34,8 +34,10 @@
                 <tr>
                     <td colspan="3">
                         <input type="button" value="GUARDAR" onclick="guardarCliente()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="EDITAR" onclick="editarCliente()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="ELIMINAR" onclick="eliminarCliente()">
+                        <input type="button" value="EDITAR" onclick="editarCliente()" title="Edita según ID">
+                        &nbsp;&nbsp;&nbsp;
+                        <input type="button" value="ELIMINAR" onclick="eliminarCliente()"
+                            title="Introduce solo el ID a eliminar">
                     </td>
                 </tr>
             </table>
