--- a/Mensaje.html
+++ b/Mensaje.html
@@ -26,8 +26,10 @@
                 <tr>
                     <td colspan="3">
                         <input type="button" value="GUARDAR" onclick="guardarMensaje()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="EDITAR" onclick="editarMensaje()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="ELIMINAR" onclick="eliminarMensaje()">
+                        <input type="button" value="EDITAR" onclick="editarMensaje()" title="Edita según ID">
+                        &nbsp;&nbsp;&nbsp;
+                        <input type="button" value="ELIMINAR" onclick="eliminarMensaje()"
+                            title="Introduce solo el ID a eliminar">
                     </td>
                 </tr>
             </table>
