--- a/Cabana.html
+++ b/Cabana.html
@@ -38,8 +38,10 @@
                 <tr>
                     <td colspan="3">
                         <input type="button" value="GUARDAR" onclick="guardarCabana()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="EDITAR" onclick="editarCabana()"> &nbsp;&nbsp;&nbsp;
-                        <input type="button" value="ELIMINAR" onclick="eliminarCabana()" title="Introduce solo el ID a eliminar">
+                        <input type="button" value="EDITAR" onclick="editarCabana()" title="Edita según ID">
+                        &nbsp;&nbsp;&nbsp;
+                        <input type="button" value="ELIMINAR" onclick="eliminarCabana()"
+                            title="Introduce solo el ID a eliminar">
                     </td>
                 </tr>
             </table>
